--- a/HTML5_CSS3/modulo 2/desafios/010/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/010/css/style.css
@@ -1,5 +1,36 @@
 @charset "UTF-8";
 
+body {
+    background-color: aqua;
+}
+
+header {
+    background-color: lawngreen;
+    padding: 5px;
+    margin: 0px;
+    border-radius: 10px;
+}
+
+header > h1 {
+    color: white;
+}
+
+header > h2 {
+    color: white;
+}
+
+menu > a {
+    text-decoration: none;
+    color: white;
+}
+
+main {
+    width: 800px;
+    margin: auto;
+    background-color: white;
+    padding: 20px;
+}
+
 @font-face {
     font-family: 'idroid';
     src: url('fontes/idroid.otf') format('opentype');
@@ -8,5 +39,23 @@
 }
 
 h2 {
+    background-color: green;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px;
     font-family: idroid;
+}
+
+.picture {
+    text-align: center;
+}
+
+#video {
+    text-align: center;
+    background-color: green;
+    padding: 10px 40px;
+}
+
+ul {
+    display: inline-block;
+    margin-right: 250px;
 }
