--- a/HTML5_CSS3/modulo 2/desafios/010/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/010/css/style.css
@@ -1,48 +1,74 @@
 @charset "UTF-8";
 
+
+@font-face {
+    font-family: 'idroid';
+    src: url('../fontes/idroid.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-    background-color: aqua;
+    background-color: #84E1AD;
+    margin: 0px;
+}
+
+main {
+    width: 800px;
+    margin: 0px auto auto auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 11px rgb(0 0 0 / 53%);
+    border-radius: 0px 0px 10px 10px;
 }
 
 header {
-    background-color: lawngreen;
+    text-align: center;
+    background-image: linear-gradient(to top, #1A5C38, #25824F, #37C878);
     padding: 5px;
     margin: 0px;
-    border-radius: 10px;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.534);
 }
 
 header > h1 {
     color: white;
 }
-
+0
 header > h2 {
     color: white;
 }
 
+header > p {
+    font: normal 100 1.1em arial, helvetica, sans-serif;
+    margin: auto;
+    color: rgba(255, 255, 255, 0.575);
+}
+
+header > menu {
+    text-align: left;
+}
+
+
 menu > a {
+    font: normal bold 16px arial, helvetica, sans-serif;
     text-decoration: none;
     color: white;
-}
-
-main {
-    width: 800px;
-    margin: auto;
-    background-color: white;
-    padding: 20px;
-}
-
-@font-face {
-    font-family: 'idroid';
-    src: url('fontes/idroid.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    padding: 5px;
 }
 
 h2 {
-    background-color: green;
+    color: #246240;
+    font-family: idroid, Arial, Helvetica, sans-serif;
+    padding: 10px;
+}
+
+.subtitulos {
+    background-image: linear-gradient(to right, #5F9477, #90B7A2, #F5FBF8);
+    color: #246240;
     border-radius: 10px 10px 0px 0px;
     padding: 10px;
-    font-family: idroid;
+    font-family: idroid, Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
 }
 
 .picture {
@@ -51,11 +77,38 @@ h2 {
 
 #video {
     text-align: center;
-    background-color: green;
+    background-color: #1A5C38;
     padding: 10px 40px;
+}
+
+h3 {
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
+    background-color: #2FA866;
+}
+
+#versoesandroid {
+    background-color: #C5EBD6;
+    padding: 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 ul {
     display: inline-block;
-    margin-right: 250px;
+    margin-right: 150px;
+}
+
+footer {
+    background-color: #1A5C38;
+    text-align: center;
+    color: white;
+    padding: 5px;
+    margin-top: 20px;
+}
+
+footer > p {
+    margin: 0px;
 }
