--- a/HTML5_CSS3/modulo 2/desafios/010/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/010/css/style.css
@@ -13,13 +13,22 @@ body {
     margin: 0px;
 }
 
-main {
-    width: 800px;
-    margin: 0px auto auto auto;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0px 0px 11px rgb(0 0 0 / 53%);
-    border-radius: 0px 0px 10px 10px;
+h2 {
+    color: #246240;
+    font-family: idroid, Arial, Helvetica, sans-serif;
+}
+
+h3 {
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
+    background-color: #2FA866;
+}
+
+p {
+    text-indent: 30px;
 }
 
 header {
@@ -33,7 +42,7 @@ header {
 header > h1 {
     color: white;
 }
-0
+
 header > h2 {
     color: white;
 }
@@ -56,10 +65,13 @@ menu > a {
     padding: 5px;
 }
 
-h2 {
-    color: #246240;
-    font-family: idroid, Arial, Helvetica, sans-serif;
-    padding: 10px;
+main {
+    width: 800px;
+    margin: 0px auto auto auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 11px rgb(0 0 0 / 53%);
+    border-radius: 0px 0px 10px 10px;
 }
 
 .subtitulos {
@@ -79,15 +91,6 @@ h2 {
     text-align: center;
     background-color: #1A5C38;
     padding: 10px 40px;
-}
-
-h3 {
-    color: white;
-    border-radius: 10px 10px 0px 0px;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 0px;
-    background-color: #2FA866;
 }
 
 #versoesandroid {
