--- a/HTML5_CSS3/modulo 2/desafios/010/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/010/css/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+:root {
+    --gradiente: to top, #1A5C38, #25824F, #37C878;
+    --titlebg: to right, #5F9477, #90B7A2, #F5FBF8;
+    --bordastop: 10px 10px 0px 0px;
+    --bordasbot: 0px 0px 10px 10px;
+}
 
 @font-face {
     font-family: 'idroid';
@@ -44,7 +50,7 @@ a:hover {
 
 header {
     text-align: center;
-    background-image: linear-gradient(to top, #1A5C38, #25824F, #37C878);
+    background-image: linear-gradient(var(--gradiente));
     padding: 5px;
     margin: 0px;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.534);
@@ -88,13 +94,17 @@ main {
     background-color: white;
     padding: 20px;
     box-shadow: 0px 0px 11px rgb(0 0 0 / 53%);
-    border-radius: 0px 0px 10px 10px;
+    border-radius: var(--bordasbot);
+}
+
+article > h1 {
+    font-family: idroid, Arial, Helvetica, sans-serif;
+    color: #246240;
 }
 
 .subtitulos {
-    background-image: linear-gradient(to right, #5F9477, #90B7A2, #F5FBF8);
+    background-image: linear-gradient(var(--titlebg));
     color: #246240;
-    border-radius: 10px 10px 0px 0px;
     padding: 10px;
     font-family: idroid, Arial, Helvetica, sans-serif;
     margin-bottom: 0px;
@@ -113,7 +123,16 @@ main {
 #versoesandroid {
     background-color: #C5EBD6;
     padding: 10px;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: var(--bordasbot);
+}
+
+aside > h2 {
+    background-color: #2FA866;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    margin-bottom: 0px;
+    border-radius: var(--bordastop);
 }
 
 ul {
