--- a/HTML5_CSS3/modulo 2/desafios/010/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/010/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 
 a:hover {
-    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0.418);
 }
 
 header {
@@ -81,6 +81,7 @@ menu > a {
     text-decoration: none;
     color: white;
     padding: 5px;
+    
 }
 
 menu > a:hover {
@@ -89,7 +90,8 @@ menu > a:hover {
 }
 
 main {
-    width: 800px;
+    max-width: 800px;
+    min-width: 250px;
     margin: 0px auto auto auto;
     background-color: white;
     padding: 20px;
@@ -112,6 +114,10 @@ article > h1 {
 
 .picture {
     text-align: center;
+}
+
+img {
+    width: 100%;
 }
 
 #video {
