--- a/HTML5_CSS3/modulo 2/desafios/012/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/012/css/style.css
@@ -19,8 +19,12 @@ main {
     border: 3px solid black;
 }
 
+main > header {
+    text-align: center;
+}
+
 div {
-    padding: 30% 10px;
+    padding: 30px;
     background-color: white; 
     text-align: left;
     line-height: 2em;
@@ -56,4 +60,12 @@ pre {
 p {
     font-weight: lighter;
     font-size: 2em;
+}
+
+div > p {
+    font-family: 'Sriracha', Arial, Helvetica, sans-serif;
+    font-weight: 1000;
+    line-height: 2em;
+    font-size: 1.5em;
+    text-align: left;
 }
