--- a/HTML5_CSS3/modulo 2/desafios/012/css/style.css
+++ b/HTML5_CSS3/modulo 2/desafios/012/css/style.css
@@ -15,7 +15,7 @@ header {
 
 main {
     margin: auto;
-    width: 1100px;
+    width: 1200px;
     border: 3px solid black;
 }
 
@@ -32,15 +32,17 @@ div {
 
 #flor {
     background-image: url(../imagens/background001.jpg);
-    max-width: 11000px;
-    max-height: 11100px;
+    background-size: cover ;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    
+    background-position: center;
 }
 
-img {
-    max-width: 100%;
-    height: 100%;
+#livro {
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 h1 {
