--- a/HTML5_CSS3/modulo 4/desafios/013/css/style.css
+++ b/HTML5_CSS3/modulo 4/desafios/013/css/style.css
@@ -1,29 +1,54 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-    background-color: black;
+    background-attachment: fixed;
     background-image: url(../imagens/fundo-madeira.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+body, html {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+
+main {
+    position: relative;
+    height: 100vh;
 }
 
 #iphone {
-    text-align: center;
+    background: url(../imagens/frame-iphone.png) no-repeat top center;
+    width: 311px;
+    height: 627px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-#frame {
-    overflow: hidden;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
 
-iframe {
 
+
+#botoes {
+    text-align: right;
+    padding: 20px;
 }
 
 .logo {
@@ -33,10 +58,6 @@ iframe {
 }
 
 .logo:hover {
-    width: 70px;
-    transition-duration: 0.25s;
-}
-
-#botoes {
-    text-align: right;
+    width: 65px;
+    transition-duration: 0.2s;
 }
