--- a/HTML5_CSS3/modulo 4/desafios/013/css/style.css
+++ b/HTML5_CSS3/modulo 4/desafios/013/css/style.css
@@ -55,9 +55,13 @@ main {
     border-radius: 50%;
     width: 55px;
     margin-bottom: 15px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.555);
 }
 
 .logo:hover {
-    width: 65px;
-    transition-duration: 0.2s;
+    transition: transform .2s, border .15s;
+    border: 2px solid rgba(255, 255, 255, 0.712);
+    transform: translate(-4px, -4px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.555);
 }
