--- a/HTML5_CSS3/modulo 4/desafios/013/css/social.css
+++ b/HTML5_CSS3/modulo 4/desafios/013/css/social.css
@@ -15,6 +15,48 @@ img {
     width: 100vw;
 }
 
+#face { 
+    color: white;
+    text-align: center;
+    display: block;
+    padding: 20px;
+    background-color: rgb(0, 0, 105);
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#face:hover {
+    background-color: rgb(0, 0, 255);
+}
+
+#tt {
+    color: white;
+    text-align: center;
+    display: block;
+    padding: 20px;
+    background-color: rgb(4, 58, 128);
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#tt:hover {
+    background-color: rgb(0, 110, 255);
+}
+
+#git {
+    color: white;
+    text-align: center;
+    display: block;
+    padding: 20px;
+    background-color: green;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#git:hover {
+    background-color: rgb(20, 214, 20);
+}
+
 a {
     color: white;
     text-align: center;
