usando media features para se adaptar a orientação do dispositivo

--- a/HTML5_CSS3/modulo 4/exercicios/ex031/mq002/css/retrato.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex031/mq002/css/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /*Configuração com tela em pé (retrato)*/
+
+body {
+    background: url(../imagens/cev-portrait.jpg) no-repeat center bottom;
+    background-size: contain;
+}
