--- a/HTML5_CSS3/modulo 4/exercicios/ex031/mq002/css/paisagem.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex031/mq002/css/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /*Configurações com tela deitada (paisagem/landscape)*/
+
+body {
+    background: url(../imagens/cev-landscape.jpg) no-repeat left bottom;
+    background-size: contain;
+}
