--- a/HTML5_CSS3/modulo 4/exercicios/ex031/mq004/css/style.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex031/mq004/css/style.css
@@ -40,22 +40,8 @@ img {
     margin: auto;
 }
 
-img#phone {
-    display: none;
-}
-
-img#tablet {
-    display: none;
-}
-
-img#print {
-    display: none;
-}
-
-img#pc {
-    display: none;
-}
-
-img {
-    display: none;
-}
+img#cel { display: block; }
+img#tablet { display: none; }
+img#print { display: none; }
+img#pc { display: none; }
+img#tv { display: none; }
