--- a/HTML5_CSS3/modulo 4/exercicios/ex031/mq005/css/index.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex031/mq005/css/index.css
@@ -19,19 +19,42 @@ header {
 header h1 {
     color: black;
     text-shadow: 1px 1px 1px white;
+    padding: 10px;
+}
+
+#burguer {
+    display: block;
+    background-color: rgb(68, 68, 68);
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#burguer:hover {
+    background-color: white;
+    color: black;
 }
 
 menu {
-    text-align: left;
+    display: none;
 }
 
-menu li {
+menu ul {
     list-style-type: none;
-    display: inline-block;
-    color: white;
+}
+
+li a {
+    display: block;
     background-color: rgb(68, 68, 68);
-    padding: 5px;
-    margin: 20px 1px 0px 0px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    border-top: 2px solid white;
+}
+
+li a:hover {
+    background-color: rgba(255, 255, 255, 0.164);
 }
 
 main {
