pequenas atualizações no CSS e adicionando scripts básicos

--- a/HTML5_CSS3/modulo 4/exercicios/ex031/mq005/css/mediaquery.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex031/mq005/css/mediaquery.css
@@ -7,15 +7,19 @@
     }
 
     #burguer {
-        display: ;
+        display: none;
+    }
+    
+    menu {
+        display: block;
+        text-align: left;
     }
 
     li {
-        display: inline;
+        display: inline-block;
     }
 
     li a {
-        display: inline-block;
         border-top: none;
     }
     
