--- a/HTML5_CSS3/modulo 4/exercicios/ex032/css/index.css
+++ b/HTML5_CSS3/modulo 4/exercicios/ex032/css/index.css
@@ -1,79 +1,136 @@
 @charset "UTF-8";
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
-html {
+html, body {
     background-color: black;
-}
-
-form {
-    background-color: rgb(255, 0, 0);
-    display: inline-block;
-    padding: 5px;
+    width: 96vw;
+    height: 100vh;
 }
 
 main {
-    position: absolute;
-    background-color: rgb(138, 0, 0);
-    color: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 15px;
-    padding: 15px;
+    margin: 0px;
+    position: relative;
+    width: 96vw;
+    height: 100vh;
 }
 
-main h1 {
+section#login {
+    background: white;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.438);
+    transition: width .3s, height .3s;
+    animation-timing-function: ease;
+    width: 80vw;
+    height: 530px;
+    margin-top: 20px;
+    transform: translate(-50%, -50%);
+}
+
+section#login div#img {
+    display: block;
+    background: black url(../imagens/predio.jpg) no-repeat center center;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login div#form {
+    display: block;
+    padding: 10px;
+}
+
+div#form h1 {
     text-align: center;
     margin: 10px;
 }
 
-main p {
+div#form p {
     text-align: justify;
+    margin: 10px 0px;
+    font-size: 0.9em;
+}
+
+form {
+    background-color: rgb(255, 0, 0);
+    width: 100%;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+form div.campo {
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
     margin: 10px 0px;
 }
 
-input {
-    width: 350px;
+div.campo span {
+    width: 20px;
+    margin: 2px;
+}
+
+div.campo label {
+    display: none;
+}
+
+div.campo input {
+    text-align: center;
+    width: 85%;
     height: 30px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
-form p {
-    background-color: blue;
-    padding: 5px;
-    border-radius: 5px;
+div.campo input:focus-within {
+    background-color: black;
+    color: white;
 }
 
- button {
+input#entrar {
     display: block;
-    width: 402px;
+    width: 100%;
+    height: 40px;
     background-color: rgb(0, 132, 255);
     border-radius: 10px;
     padding: 5px;
     margin: 10px 0px;
- }
+    border: none; 
+    font-size: 1em;
+}
 
- button:hover {
+input#entrar:hover {
     background-color: blue;
     cursor: pointer;
- }
+}
 
- a {
+a {
     display: block;
     background-color: white;
     color: black;
     padding: 10px;
     border-radius: 10px;
-    width: 380px;
+    width: 100%;
+    height: 40px;
     text-align: center;
     text-decoration: none;
- }
+}
 
- a:hover {
+a :hover {
     background-color: rgba(255, 255, 255, 0.658);
- }
+}
+
+form > a > span#esqueci {
+    font-size: 1.2em;
+}
